--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ requires-python = ">=3.10"
 dependencies = [
     "starlette",
     "pydantic",
-    "structlog", 
+    "structlog",
     "tomli",
     "fastapi",
     "uvicorn",
@@ -19,6 +19,17 @@ dependencies = [
     "typer",
     "PyJWT[crypto]",
     "passlib[bcrypt]",
+    "opentelemetry-api",
+    "opentelemetry-sdk",
+    "opentelemetry-exporter-prometheus",
+    "opentelemetry-instrumentation-fastapi",
+    "opentelemetry-exporter-jaeger",
+    "opentelemetry-exporter-otlp",
+    "opentelemetry-instrumentation-requests",
+    "opentelemetry-instrumentation-sqlalchemy",
+    "deprecated>=1.2.18",
+    "psutil",
+    "opentelemetry-instrumentation-system-metrics>=0.58b0",
 ]
 
 [project.scripts]
@@ -33,6 +44,12 @@ dev = [
     "coverage",
     "httpx",          # Para TestClient
 ]
+# APM Addons
+apm-newrelic = ["newrelic"]
+apm-datadog = ["ddtrace"]
+apm-elastic = ["elastic-apm"]
+# All APM addons
+apm-all = ["newrelic", "ddtrace", "elastic-apm"]
 
 [tool.ruff]
 # Longitud de línea máxima, compatible con Black.
