feat(docs): restructure documentation into modular system
- Create /docs directory with specific documentation modules
- Simplify README.md as main entry point with links to detailed docs
- Update PRD v1.1 with REQ6 for modular documentation system
- Update DDT v1.1 with documentation architecture and principles
- Update Roadmap v1.1 with completed Ã‰pica 9 (Documentation System)
- Add Getting Started guide with installation and first project
- Add Examples guide with practical patterns and use cases
- Translate all docstrings and comments to English
- Fix MyPy errors in addons and security modules
- Complete Ã‰pica 9: Sistema de DocumentaciÃ³n Modular

Refs: #docs-restructure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,12 +44,17 @@ dev = [
     "coverage",
     "httpx",          # Para TestClient
 ]
-# APM Addons
-apm-newrelic = ["newrelic"]
-apm-datadog = ["ddtrace"]
-apm-elastic = ["elastic-apm"]
-# All APM addons
-apm-all = ["newrelic", "ddtrace", "elastic-apm"]
+# APM Addons (moved to turboapi-addons package)
+# apm-newrelic = ["newrelic"]
+# apm-datadog = ["ddtrace"]
+# apm-elastic = ["elastic-apm"]
+# apm-all = ["newrelic", "ddtrace", "elastic-apm"]
+
+# OAuth2 Addons (moved to turboapi-addons package)
+# oauth-google = ["aiohttp>=3.8.0"]
+# oauth-github = ["aiohttp>=3.8.0"]
+# oauth-microsoft = ["aiohttp>=3.8.0"]
+# oauth-all = ["aiohttp>=3.8.0"]
 
 [tool.ruff]
 # Longitud de línea máxima, compatible con Black.
